Added a border line and made a specific movie item disappear completely (until it appears upon a click on the corresponding link on the right menu panel)

--- a/views/movieinfo.handlebars
+++ b/views/movieinfo.handlebars
@@ -32,11 +32,7 @@
   <div class="container" style="text-align: center; position: relative; z-index: 1" id="container">
     {{#each movies}}
       <div class="container">
-        <div class="col-md-9 portfolio-item" style="text-align: center; margin: 0 auto" id="a{{@index}}">
-          <h1><b>{{title}}</b></h1>
-          <br>
-          <img class="center fit" src="data/{{frames.2.file}}" style="width: 100%; position: relative;" id="img{{@index}}" />
-          <br>
+        <div class="col-md-9 portfolio-item" style="text-align: center; margin: 0 auto; border-right: solid #C0D6E4;" id="a{{@index}}">
         </div>
     {{/each}}
     <div class="col-md-3 portfolio-item" style="text-align: left; margin: 0 auto">
