--- a/views/movieinfo.handlebars
+++ b/views/movieinfo.handlebars
@@ -32,13 +32,12 @@
   <div class="container" style="text-align: center; position: relative; z-index: 1" id="container">
     <div class="row" style="padding: 0 auto; margin: 0 auto;">
       {{#each movies}}
-        <div class="col-md-9 portfolio-item" style="width: 75%; padding: 0 auto; margin: 0 auto; position: relative; border-right: solid #C0D6E4;" id="img{{@index}}">
-          <img class="center fit" src="data/{{frames.0.file}}" style="width: 100%; position: relative;" id="img{{@index}}" />
+        <div class="col-md-3 portfolio-item" style="padding: 0 auto; margin: 0 auto; position: relative;">
+          <img class="center fit" src="" style="position: relative;" id="img{{@index}}" />
           <br>
         </div>
-        <div class="col-md-9 portfolio-item" style="width: 75%; padding: 0 auto; margin: 0 auto; border-right: solid #C0D6E4;" id="a{{@index}}"></div>
-        <div class="col-md-9 portfolio-item" style="width: 75%; padding: 0 auto; margin: 0 auto; position: relative; border-right: solid #C0D6E4;" id="palette{{@index}}">
-        </div>
+        <div class="col-md-3 portfolio-item" style="padding: 0 auto; margin: 0 auto;" id="palette{{@index}}"><h3><b>Color Palette of Each Frame</b></h3></div>
+        <div class="col-md-3 portfolio-item" style="padding: 0 auto; margin: 0 auto;" id="a{{@index}}"><h3><b>Color Barcode (avg. color of each frame)</b></h3></div>
       {{/each}}
       <div class="col-md-3 portfolio-item" style="position: absolute; text-align: left; margin: 0 75% auto;">
         <div class="form-group">
@@ -55,6 +54,7 @@
         </div>
         {{#each movies}}
           <a href="#" id="movielink{{@index}}">{{title}}</a>
+          <br>
         {{/each}}
       </div>
     </div>
